--- a/LanguageModel/LanguageService.csproj
+++ b/LanguageModel/LanguageService.csproj
@@ -74,7 +74,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Formatting\Options\OptionalRule.cs" />
+    <Compile Include="Formatting\Options\OptionalRuleGroup.cs" />
+    <Compile Include="Formatting\Options\OptionalRuleMap.cs" />
     <Compile Include="Formatting\Options\OptionInfo.cs" />
     <Compile Include="Formatting\Formatter.cs" />
     <Compile Include="Formatting\FormattingContext.cs" />
