--- a/LanguageModel/packages.config
+++ b/LanguageModel/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="ImmutableObjectGraph" version="1.0.15192-beta7" targetFramework="net452" />
   <package id="ImmutableObjectGraph.Generation" version="1.0.15192-beta7" targetFramework="net452" />
+  <package id="Microsoft.VisualStudio.Validation" version="14.0.50617-pre" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net452" />
   <package id="Validation" version="2.0.5.14286" targetFramework="net452" />
