--- a/LanguageModel/LuaVSHost/LuaLanguageServicePackage.csproj
+++ b/LanguageModel/LuaVSHost/LuaLanguageServicePackage.csproj
@@ -66,7 +66,7 @@
     <Compile Include="Shared\Core.cs" />
     <Compile Include="Shared\GlobalEditorOptions.cs" />
     <Compile Include="Shared\ICore.cs" />
-    <Compile Include="Shared\SourceTextProvider.cs" />
+    <Compile Include="Shared\SourceTextCache.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Key.snk" />
