Address codeflow comments

--- a/LanguageModel/LuaVSHost/LuaLanguageServicePackage.csproj
+++ b/LanguageModel/LuaVSHost/LuaLanguageServicePackage.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Shared\ContentTypes.cs" />
     <Compile Include="Shared\Core.cs" />
     <Compile Include="Shared\GlobalEditorOptions.cs" />
+    <Compile Include="Shared\Guids.cs" />
     <Compile Include="Shared\ICore.cs" />
     <Compile Include="Shared\SourceTextCache.cs" />
   </ItemGroup>
