--- a/LanguageModel/LuaVSHost/LuaLanguageServicePackage.csproj
+++ b/LanguageModel/LuaVSHost/LuaLanguageServicePackage.csproj
@@ -64,6 +64,12 @@
     <Compile Include="Formatting\OptionPages\UserControls\GeneralUserControl.xaml.cs">
       <DependentUpon>GeneralUserControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Formatting\OptionPages\IndentationPage.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Formatting\OptionPages\UserControls\IndentationUserControl.xaml.cs">
+      <DependentUpon>IndentationUserControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Formatting\TextView.cs" />
     <Compile Include="Formatting\UserSettings.cs" />
     <Compile Include="Formatting\WpfTextViewConnectionListener.cs" />
@@ -230,6 +236,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="Formatting\OptionPages\UserControls\GeneralUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Formatting\OptionPages\UserControls\IndentationUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
