Add wrapping/newline page and checkbox bindings

--- a/LanguageModel/LuaVSHost/LuaLanguageServicePackage.csproj
+++ b/LanguageModel/LuaVSHost/LuaLanguageServicePackage.csproj
@@ -76,6 +76,12 @@
     <Compile Include="Formatting\OptionPages\UserControls\SpacingUserControl.xaml.cs">
       <DependentUpon>SpacingUserControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Formatting\OptionPages\UserControls\WrappingAndNewLineUserControl.xaml.cs">
+      <DependentUpon>WrappingAndNewLineUserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Formatting\OptionPages\WrappingAndNewLinePage.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Formatting\TextView.cs" />
     <Compile Include="Formatting\UserSettings.cs" />
     <Compile Include="Formatting\WpfTextViewConnectionListener.cs" />
@@ -250,6 +256,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Formatting\OptionPages\UserControls\SpacingUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Formatting\OptionPages\UserControls\WrappingAndNewLineUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
