--- a/LanguageModel/LanguageModel.Tests/LanguageModel.Tests.csproj
+++ b/LanguageModel/LanguageModel.Tests/LanguageModel.Tests.csproj
@@ -81,10 +81,12 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="TestGeneration\GeneratedTestFiles\SmallIf_Generated.cs" />
     <Compile Include="LexerTests.cs" />
     <Compile Include="ParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestGenerator.cs" />
+    <Compile Include="TestGeneration\Tester.cs" />
+    <Compile Include="TestGeneration\TestGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="CorrectSampleLuaFiles\assignment.lua">
@@ -125,9 +127,6 @@
     </None>
     <None Include="CorrectSampleLuaFiles\trivia1.lua" />
     <None Include="packages.config" />
-    <None Include="SerializedJsonOutput\smallif.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LanguageService.csproj">
