Fixed small if test... end keyword still missing.

--- a/LanguageModel/LanguageModel.Tests/LanguageModel.Tests.csproj
+++ b/LanguageModel/LanguageModel.Tests/LanguageModel.Tests.csproj
@@ -81,6 +81,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="TestGeneration\GeneratedTestFiles\Assignments_Generated.cs" />
     <Compile Include="TestGeneration\GeneratedTestFiles\SmallIf_Generated.cs" />
     <Compile Include="LexerTests.cs" />
     <Compile Include="ParserTests.cs" />
