--- a/LanguageModel/LanguageModel.Tests/LanguageModel.Tests.csproj
+++ b/LanguageModel/LanguageModel.Tests/LanguageModel.Tests.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestGeneration\Tester.cs" />
     <Compile Include="TestGeneration\TestGenerator.cs" />
+    <Compile Include="TestGeneration\GeneratedTestFiles\WhileStatement_Generated.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="CorrectSampleLuaFiles\assignment.lua">
