--- a/LanguageModel/packages.config
+++ b/LanguageModel/packages.config
@@ -3,6 +3,7 @@
   <package id="ImmutableObjectGraph" version="1.0.15192-beta7" targetFramework="net452" />
   <package id="ImmutableObjectGraph.Generation" version="1.0.15192-beta7" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.Validation" version="14.0.50617-pre" targetFramework="net452" />
+  <package id="StyleCop.Analyzers" version="1.0.0-beta003" targetFramework="net452" developmentDependency="true" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net452" />
   <package id="Validation" version="2.0.6.15003" targetFramework="net452" />
   <package id="xunit" version="2.1.0-beta3-build3029" targetFramework="net452" />
