--- a/LanguageModel/LanguageService.csproj
+++ b/LanguageModel/LanguageService.csproj
@@ -122,7 +122,7 @@
     <Compile Include="LanguageModel\NodeClasses.cs">
       <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
     </Compile>
-    <Compile Include="SyntaxKind.cs" />
+    <Compile Include="LanguageModel\SyntaxKind.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
