--- a/LanguageModel/LanguageModel.Tests/LanguageModel.Tests.csproj
+++ b/LanguageModel/LanguageModel.Tests/LanguageModel.Tests.csproj
@@ -82,11 +82,15 @@
   </Choose>
   <ItemGroup>
     <Compile Include="TestGeneration\GeneratedTestFiles\Assignments_Generated.cs" />
+    <Compile Include="TestGeneration\GeneratedTestFiles\ComplexTableConstructor_Generated.cs" />
+    <Compile Include="TestGeneration\GeneratedTestFiles\FunctionDefError_Generated.cs" />
     <Compile Include="TestGeneration\GeneratedTestFiles\MultipleTypeAssignment_Generated.cs" />
     <Compile Include="TestGeneration\GeneratedTestFiles\SmallIf_Generated.cs" />
     <Compile Include="LexerTests.cs" />
     <Compile Include="ParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestGeneration\GeneratedTestFiles\TableStatements_Generated.cs" />
+    <Compile Include="TestGeneration\GeneratedTestFiles\TripleNestedFunctionCall_Generated.cs" />
     <Compile Include="TestGeneration\Tester.cs" />
     <Compile Include="TestGeneration\TestGenerator.cs" />
     <Compile Include="TestGeneration\GeneratedTestFiles\WhileStatement_Generated.cs" />
