--- a/LanguageModel/LanguageModel.Tests/LanguageModel.Tests.csproj
+++ b/LanguageModel/LanguageModel.Tests/LanguageModel.Tests.csproj
@@ -85,6 +85,7 @@
     <Compile Include="TestGeneration\GeneratedTestFiles\ComplexTableConstructor_Generated.cs" />
     <Compile Include="TestGeneration\GeneratedTestFiles\FunctionDefError_Generated.cs" />
     <Compile Include="TestGeneration\GeneratedTestFiles\MultipleTypeAssignment_Generated.cs" />
+    <Compile Include="TestGeneration\GeneratedTestFiles\SimpleTableError_Generated.cs" />
     <Compile Include="TestGeneration\GeneratedTestFiles\SmallIf_Generated.cs" />
     <Compile Include="LexerTests.cs" />
     <Compile Include="ParserTests.cs" />
