--- a/LanguageModel/LanguageModel.Tests/LanguageModel.Tests.csproj
+++ b/LanguageModel/LanguageModel.Tests/LanguageModel.Tests.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestGeneration\GeneratedTestFiles\TableStatements_Generated.cs" />
     <Compile Include="TestGeneration\GeneratedTestFiles\TripleNestedFunctionCall_Generated.cs" />
+    <Compile Include="TestGeneration\LucaDemo_Generated.cs" />
     <Compile Include="TestGeneration\Tester.cs" />
     <Compile Include="TestGeneration\TestGenerator.cs" />
     <Compile Include="TestGeneration\GeneratedTestFiles\WhileStatement_Generated.cs" />
