--- a/LanguageModel/LanguageModel.Tests/LanguageModel.Tests.csproj
+++ b/LanguageModel/LanguageModel.Tests/LanguageModel.Tests.csproj
@@ -81,7 +81,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="TestGeneration\GeneratedTestFiles\PrefixExpFirst_Generated.cs" />
     <Compile Include="TestGeneration\GeneratedTestFiles\Assignments_Generated.cs" />
+    <Compile Include="TestGeneration\GeneratedTestFiles\BracketError_Generator.cs" />
     <Compile Include="TestGeneration\GeneratedTestFiles\ComplexTableConstructor_Generated.cs" />
     <Compile Include="TestGeneration\GeneratedTestFiles\EmptyProgram_Generated.cs" />
     <Compile Include="TestGeneration\GeneratedTestFiles\FunctionDefError_Generated.cs" />
@@ -94,7 +96,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestGeneration\GeneratedTestFiles\TableStatements_Generated.cs" />
     <Compile Include="TestGeneration\GeneratedTestFiles\TripleNestedFunctionCall_Generated.cs" />
-    <Compile Include="TestGeneration\LucaDemo_Generated.cs" />
+    <Compile Include="TestGeneration\GeneratedTestFiles\LucaDemo_Generated.cs" />
     <Compile Include="TestGeneration\Tester.cs" />
     <Compile Include="TestGeneration\TestGenerator.cs" />
     <Compile Include="TestGeneration\GeneratedTestFiles\WhileStatement_Generated.cs" />
