--- a/LanguageModel/LanguageService.csproj
+++ b/LanguageModel/LanguageService.csproj
@@ -75,6 +75,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classification\Classification.cs" />
+    <Compile Include="Classification\Colourizer.cs" />
+    <Compile Include="Classification\TagInfo.cs" />
     <Compile Include="Formatting\Options\OptionalRuleGroup.cs" />
     <Compile Include="Formatting\Options\OptionalRuleMap.cs" />
     <Compile Include="Formatting\Options\GlobalOptions.cs" />
