Add squiggle error support in the Lua tooling
* Add a DiagnosticsProvider to the language model that exposes the parsetree errors through the LS API
* Add an ErrorTagger to draw squiggles in the editor, delays 2 seconds after the last buffer edit for a final error update to make sure everything is up to date (the editor calls this API super frequently)
* Move a few files around to have better organization

--- a/LanguageModel/LanguageService.csproj
+++ b/LanguageModel/LanguageService.csproj
@@ -75,6 +75,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Diagnostics\DiagnosticsProvider.cs" />
+    <Compile Include="Diagnostics\IDiagnosticsProvider.cs" />
     <Compile Include="Formatting\Options\IndentStyle.cs" />
     <Compile Include="Formatting\Options\IndentStyleInfo.cs" />
     <Compile Include="Formatting\Options\OptionalRuleGroup.cs" />
