--- a/Formatting.Tests/Formatting.Tests.csproj
+++ b/Formatting.Tests/Formatting.Tests.csproj
@@ -93,7 +93,7 @@
     <Compile Include="FormatRulesAndIndentation\LeftCommaTests.cs" />
     <Compile Include="FormatRulesAndIndentation\MixedTests.cs" />
     <Compile Include="FormatRulesAndIndentation\NewlineRuleTesting.cs" />
-    <Compile Include="SmartIndent\SmartIndentTester.cs" />
+    <Compile Include="SmartIndent\SmartIndentTests.cs" />
     <Compile Include="Tester.cs" />
     <Compile Include="FormatRulesAndIndentation\TrailingWhitespaceTests.cs" />
     <Compile Include="FormatRulesAndIndentation\WrappingTests.cs" />
