Implemented Error List Navigation.

--- a/LanguageModel/LuaVSHost/LuaLanguageServicePackage.csproj
+++ b/LanguageModel/LuaVSHost/LuaLanguageServicePackage.csproj
@@ -57,9 +57,12 @@
     <Compile Include="Errors\ErrorListPresenter.cs" />
     <Compile Include="Errors\ErrorTagger.cs" />
     <Compile Include="Errors\ErrorTaggerProvider.cs" />
+    <Compile Include="Navigation\IEditorOperationsFactoryService.cs" />
     <Compile Include="Shared\BufferExtensions.cs" />
     <Compile Include="Shared\CommandFilter.cs" />
     <Compile Include="Formatting\IFormatter.cs" />
+    <Compile Include="Navigation\DocumentOperations.cs" />
+    <Compile Include="Navigation\IDocumentOperations.cs" />
     <Compile Include="Shared\IMiniCommandFilter.cs" />
     <Compile Include="Formatting\FormatCommandHandler.cs" />
     <Compile Include="Formatting\OptionPages\BaseDialogPage.cs">
