Replaced generated tests.

--- a/LanguageModel/LanguageModel.Tests/LanguageModel.Tests.csproj
+++ b/LanguageModel/LanguageModel.Tests/LanguageModel.Tests.csproj
@@ -84,7 +84,40 @@
     <Compile Include="LexerTests.cs" />
     <Compile Include="ParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\*_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\0_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\10_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\11_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\12_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\13_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\14_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\15_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\16_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\17_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\18_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\19_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\1_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\20_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\21_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\22_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\23_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\24_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\25_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\26_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\27_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\28_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\29_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\2_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\30_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\31_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\32_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\33_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\3_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\4_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\5_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\6_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\7_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\8_Generated.cs" />
+    <Compile Include="TestGeneration\UnvalidatedGeneratedTests\9_Generated.cs" />
     <Compile Include="TestGeneration\ValidatedGeneratedTests\Assignments_Generated.cs" />
     <Compile Include="TestGeneration\ValidatedGeneratedTests\BracketError_Generator.cs" />
     <Compile Include="TestGeneration\ValidatedGeneratedTests\ComplexTableConstructor_Generated.cs" />
