--- a/src/LuaVSHost/LuaLanguageServicePackage.csproj
+++ b/src/LuaVSHost/LuaLanguageServicePackage.csproj
@@ -41,6 +41,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>LuaLanguageServicePackage.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -49,6 +50,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>LuaLanguageServicePackage.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Classifications\Tagger.cs" />
@@ -110,6 +112,7 @@
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
     <None Include="Key.snk" />
+    <None Include="LuaLanguageServicePackage.ruleset" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
