Remove NewOptions, used GlobalOptions instead
Rename GlobalOptions to FormattingOptions

--- a/LanguageModel/LanguageService.csproj
+++ b/LanguageModel/LanguageService.csproj
@@ -84,11 +84,10 @@
     <Compile Include="Classification\TagInfo.cs" />
     <Compile Include="Formatting\Options\OptionalRuleGroup.cs" />
     <Compile Include="Formatting\Options\OptionalRuleMap.cs" />
-    <Compile Include="Formatting\Options\GlobalOptions.cs" />
+    <Compile Include="Formatting\Options\FormattingOptions.cs" />
     <Compile Include="Formatting\Formatter.cs" />
     <Compile Include="Formatting\FormattingContext.cs" />
     <Compile Include="Formatting\Indenter.cs" />
-    <Compile Include="Formatting\Options\NewOptions.cs" />
     <Compile Include="Formatting\ParsedToken.cs" />
     <Compile Include="Formatting\Ruling\DeleteSpaceBeforeEofToken.cs" />
     <Compile Include="Formatting\Ruling\DeleteTrailingWhitespace.cs" />
