Added implementatino of without cancelation.

--- a/LanguageModel/LuaVSHost/LuaLanguageServicePackage.csproj
+++ b/LanguageModel/LuaVSHost/LuaLanguageServicePackage.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Errors\ErrorListPresenter.cs" />
     <Compile Include="Errors\ErrorTagger.cs" />
     <Compile Include="Errors\ErrorTaggerProvider.cs" />
+    <Compile Include="Errors\TaskExtensions.cs" />
     <Compile Include="Navigation\IEditorOperationsFactoryService.cs" />
     <Compile Include="Shared\BufferExtensions.cs" />
     <Compile Include="Shared\CommandFilter.cs" />
